@@ -390,6 +390,8 @@ label.ms-validation-error:before {
   text-align: center;
   width: 100%;
   display: block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
   opacity: 0;
 }
