@@ -21,4 +21,7 @@
 			}
 		}
 	}
+	.wpmui-input-direct_access {
+		width: 100%;
+	}
 }
