@@ -5,7 +5,8 @@ Build Stamp: BUILDTIME
 Change Log:
 ----------------------------------------------------------------------
 1.0.4
-- Added : WP Rest
+- Added: Premium WP Rest Addon
+- Added: Advanced media protection
 
 1.0.3.6
 - Added: Added setting to enable or disable cron usage for email sending
